16_subseq/grade.txt
Grading at Wed Sep  2 11:28:12 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:25:3: error: variable-sized object may not be initialized
   int countSeq[n]={0};
   ^
maxSeq.c:25:20: error: excess elements in array initializer [-Werror]
   int countSeq[n]={0};
                    ^
maxSeq.c:25:20: note: (near initialization for ‘countSeq’)
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
